fix spacing on mobile

--- a/src/public/less/pages/esm.less
+++ b/src/public/less/pages/esm.less
@@ -63,7 +63,7 @@
 		border-radius: 8px;
 		padding: 48px;
 		@media (max-width: @screen-sm-min) {
-			padding: 24px;
+			padding: 32px 24px;
 		}
 
 		.code {
@@ -83,7 +83,7 @@
 		}
 
 		.buttons {
-			margin: 30px 0;
+			margin: 32px 0;
 			form {
 				display: flex;
 				align-items: center;
@@ -98,8 +98,8 @@
 					margin-left: 16px;
 					margin-right: 16px;
 					@media (max-width: @screen-xs-min) {
-						margin-top: 12px;
-						margin-bottom: 12px;
+						margin-top: 8px;
+						margin-bottom: 8px;
 					}
 				}
 
@@ -140,11 +140,14 @@
 		margin-top: 80px;
 		margin-bottom: 80px;
 		text-align: center;
+		@media (max-width: @screen-sm-min) {
+			margin-top: 45px;
+			margin-bottom: 45px;
+		}
 		
 		.row{
-			margin-bottom: 24px;
 			& > [class*='col-'] {
-				margin-bottom: 24px;
+				margin-bottom: 45px;
 			}
 			@media (min-width: @screen-sm-min) {
 				& > [class*='col-'] {
@@ -219,6 +222,8 @@
 					@media (min-width: @screen-sm-min) {
 						font-size: 16px;
 						line-height: 24px;
+						display: flex;
+						padding: 12px 16px;
 					}
 					span {
 						color: #17233B;
@@ -298,10 +303,10 @@
 	.infographic {
 		margin-top: 80px;
 		margin-bottom: 80px;
-		// @media (max-width: @screen-sm-min) {
-		// 	margin-top: 64px;
-		// 	margin-bottom: 64px;
-		// }
+		@media (max-width: @screen-sm-min) {
+			margin-top: 40px;
+			margin-bottom: 40px;
+		}
 	}
 }
 
